[package]
name = "adbir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.0", features = ["derive", "env"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.56"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
jemallocator = "0.5.4"
